# demo_tracker

./: .gitignore  Dockerfile  docker-compose.yaml  run.sh
.devcontainer/: devcontainer.json
tracker/: CMakeLists.txt
tracker/cfg/: config.yaml
tracker/include/: box_types.h  csv_parser.h  data_utils.h  debug_utils.h  hungarian_solver.h  math_utils.h  renderer.h  tracking_manager.h
tracker/src/: main.cpp
